--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
 </head>
 <body>
+    <div class="calculator">
+        <div class="input" id="result"><p>0</p></div>
+        <div class="buttons">
+            <div class="btns">
+                <button class="btn hover-btn btn-25 ac blue">ac</button>
+                <button class="btn hover-btn btn-25 plus-minus blue">+/-</button>
+                <button class="btn hover-btn btn-25 percent blue">%</button>
+                <button class="btn hover-btn btn-25 division orange">/</button>    
+            </div>
+            <div class="btns">
+                <button class="btn hover-btn btn-25 seven">7</button>
+                <button class="btn hover-btn btn-25 eight">8</button>
+                <button class="btn hover-btn btn-25 nine">9</button>
+                <button class="btn hover-btn btn-25 multiply orange">x</button>
+            </div>
+            <div class="btns">
+                <button class="btn hover-btn btn-25 four">4</button>
+                <button class="btn hover-btn btn-25 five">5</button>
+                <button class="btn hover-btn btn-25 six">6</button>
+                
+                <button class="btn hover-btn btn-25 minus orange">-</button>
+            </div>
+            <div class="btns">
+                <button class="btn hover-btn btn-25 one">1</button>
+                <button class="btn hover-btn btn-25 two">2</button>
+                <button class="btn hover-btn btn-25 three">3</button>
+                <button class="btn hover-btn btn-25 plus orange">+</button>
+            </div>
+            <div class="btns">
+                <button class="btn hover-btn btn-50 zero">0</button>
+                <button class="btn hover-btn btn-25 dot">.</button>
+                <button class="btn hover-btn btn-25 equals orange">=</button>  
+            </div> 
+        </div>
+    </div>
+
+
+
     <script src="js/script.js"></script>
 </body>
 </html>
